src/y.output
Grammar

    0 $accept: Program $end

    1 Program: ProgramElementList

    2 ProgramElementList: ProgramElement ProgramElementList
    3                   | %empty

    4 ProgramElement: VarDeclStmt
    5               | StructDef
    6               | FnDeclStmt
    7               | FnDef
    8               | SEMICOLON

    9 ArithExpr: ArithExpr ADD ArithExpr
   10          | ArithExpr SUB ArithExpr
   11          | ArithExpr MUL ArithExpr
   12          | ArithExpr DIV ArithExpr
   13          | ExprUnit

   14 NUM: UNUM
   15    | SUB UNUM

   16 ArrayExpr: LeftVal LSB ID RSB
   17          | LeftVal LSB NUM RSB

   18 ExprUnit: NUM
   19         | ID
   20         | LP ArithExpr RP
   21         | FnCall
   22         | ArrayExpr
   23         | LeftVal DOT ID

   24 BoolExpr: BoolExpr AND BoolExpr
   25         | BoolExpr OR BoolExpr
   26         | BoolUnit

   27 BoolUnit: LP ExprUnit LT ExprUnit RP
   28         | LP ExprUnit LE ExprUnit RP
   29         | LP ExprUnit GT ExprUnit RP
   30         | LP ExprUnit GE ExprUnit RP
   31         | LP ExprUnit EQ ExprUnit RP
   32         | LP ExprUnit NE ExprUnit RP
   33         | LP BoolExpr RP
   34         | NOT BoolUnit

   35 BoolUnit_: LP ExprUnit LT ExprUnit RP
   36          | LP ExprUnit LE ExprUnit RP
   37          | LP ExprUnit GT ExprUnit RP
   38          | LP ExprUnit GE ExprUnit RP
   39          | LP ExprUnit EQ ExprUnit RP
   40          | LP ExprUnit NE ExprUnit RP
   41          | LP BoolExpr RP
   42          | LP NOT BoolUnit RP

   43 AssignStmt: LeftVal AS RightVal SEMICOLON

   44 LeftVal: ID
   45        | ArrayExpr
   46        | LeftVal DOT ID

   47 RightVal: ArithExpr

   48 RightValList: RightVal RightValRestList
   49             | %empty

   50 RightValRestList: RightValRest RightValRestList
   51                 | %empty

   52 RightValRest: COMMA RightVal

   53 FnCall: ID LP RightValList RP

   54 VarDeclStmt: LET VarDecl SEMICOLON
   55            | LET VarDef SEMICOLON

   56 VarDecl: ID COLON Type
   57        | ID
   58        | ID LSB NUM RSB COLON Type
   59        | ID LSB NUM RSB

   60 FieldDecl: ID COLON Type
   61          | ID LSB NUM RSB COLON Type

   62 VarDef: ID COLON Type AS RightVal
   63       | ID AS RightVal
   64       | ID LSB NUM RSB COLON Type AS LB RightValList RB
   65       | ID LSB NUM RSB AS LB RightValList RB

   66 Type: INT
   67     | ID

   68 VarDeclList: VarDecl VarDeclRestList
   69            | %empty

   70 VarDeclRestList: VarDeclRest VarDeclRestList
   71                | %empty

   72 VarDeclRest: COMMA VarDecl

   73 FieldDeclList: FieldDecl FieldDeclRestList
   74              | %empty

   75 FieldDeclRestList: FieldDeclRest FieldDeclRestList
   76                  | %empty

   77 FieldDeclRest: COMMA FieldDecl

   78 StructDef: STRUCT ID LB FieldDeclList RB

   79 ParamDecl: VarDeclList

   80 FnDecl: FN ID LP ParamDecl RP
   81       | FN ID LP ParamDecl RP ARROW Type

   82 FnDeclStmt: FnDecl SEMICOLON

   83 ReturnStmt: RETURN RightVal SEMICOLON
   84           | RETURN SEMICOLON

   85 FnDef: FnDecl CodeBlock

   86 CodeBlockStmt: VarDeclStmt
   87              | AssignStmt
   88              | CallStmt
   89              | IfStmt
   90              | WhileStmt
   91              | ReturnStmt
   92              | CONTINUE SEMICOLON
   93              | BREAK SEMICOLON
   94              | SEMICOLON

   95 CodeBlockStmtList: CodeBlockStmt CodeBlockStmtList
   96                  | %empty

   97 CodeBlock: LB CodeBlockStmtList RB

   98 CallStmt: FnCall SEMICOLON

   99 IfStmt: IF BoolUnit_ CodeBlock
  100       | IF BoolUnit_ CodeBlock ELSE CodeBlock

  101 WhileStmt: WHILE BoolUnit_ CodeBlock


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <tokenId> (258) 16 19 23 44 46 53 56 57 58 59 60 61 62 63 64 65 67 78 80 81
    UNUM <tokenNum> (259) 14 15
    INT <pos> (260) 66
    LET <pos> (261) 54 55
    STRUCT <pos> (262) 78
    FN <pos> (263) 80 81
    IF <pos> (264) 99 100
    ELSE <pos> (265) 100
    WHILE <pos> (266) 101
    DOT <pos> (267) 23 46
    CONTINUE <pos> (268) 92
    BREAK <pos> (269) 93
    RETURN <pos> (270) 83 84
    SEMICOLON <pos> (271) 8 43 54 55 82 83 84 92 93 94 98
    COMMA <pos> (272) 52 72 77
    COLON <pos> (273) 56 58 60 61 62 64
    ARROW <pos> (274) 81
    ADD <pos> (275) 9
    SUB <pos> (276) 10 15
    MUL <pos> (277) 11
    DIV <pos> (278) 12
    OR <pos> (279) 25
    AND <pos> (280) 24
    LT <pos> (281) 27 35
    LE <pos> (282) 28 36
    GT <pos> (283) 29 37
    GE <pos> (284) 30 38
    EQ <pos> (285) 31 39
    NE <pos> (286) 32 40
    NOT <pos> (287) 34 42
    LP <pos> (288) 20 27 28 29 30 31 32 33 35 36 37 38 39 40 41 42 53 80 81
    RP <pos> (289) 20 27 28 29 30 31 32 33 35 36 37 38 39 40 41 42 53 80 81
    LB <pos> (290) 64 65 78 97
    RB <pos> (291) 64 65 78 97
    LSB <pos> (292) 16 17 58 59 61 64 65
    RSB <pos> (293) 16 17 58 59 61 64 65
    AS <pos> (294) 43 62 63 64 65
    NEG (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Program <program> (42)
        on left: 1
        on right: 0
    ProgramElementList <programElementList> (43)
        on left: 2 3
        on right: 1 2
    ProgramElement <programElement> (44)
        on left: 4 5 6 7 8
        on right: 2
    ArithExpr <arithExpr> (45)
        on left: 9 10 11 12 13
        on right: 9 10 11 12 20 47
    NUM <tokenNum> (46)
        on left: 14 15
        on right: 17 18 58 59 61 64 65
    ArrayExpr <arrayExpr> (47)
        on left: 16 17
        on right: 22 45
    ExprUnit <exprUnit> (48)
        on left: 18 19 20 21 22 23
        on right: 13 27 28 29 30 31 32 35 36 37 38 39 40
    BoolExpr <boolExpr> (49)
        on left: 24 25 26
        on right: 24 25 33 41
    BoolUnit <boolUnit> (50)
        on left: 27 28 29 30 31 32 33 34
        on right: 26 34 42
    BoolUnit_ <boolUnit> (51)
        on left: 35 36 37 38 39 40 41 42
        on right: 99 100 101
    AssignStmt <assignStmt> (52)
        on left: 43
        on right: 87
    LeftVal <leftVal> (53)
        on left: 44 45 46
        on right: 16 17 23 43 46
    RightVal <rightVal> (54)
        on left: 47
        on right: 43 48 52 62 63 83
    RightValList <rightValList> (55)
        on left: 48 49
        on right: 53 64 65
    RightValRestList <rightValList> (56)
        on left: 50 51
        on right: 48 50
    RightValRest <rightVal> (57)
        on left: 52
        on right: 50
    FnCall <fnCall> (58)
        on left: 53
        on right: 21 98
    VarDeclStmt <varDeclStmt> (59)
        on left: 54 55
        on right: 4 86
    VarDecl <varDecl> (60)
        on left: 56 57 58 59
        on right: 54 68 72
    FieldDecl <varDecl> (61)
        on left: 60 61
        on right: 73 77
    VarDef <varDef> (62)
        on left: 62 63 64 65
        on right: 55
    Type <type> (63)
        on left: 66 67
        on right: 56 58 60 61 62 64 81
    VarDeclList <varDeclList> (64)
        on left: 68 69
        on right: 79
    VarDeclRestList <varDeclList> (65)
        on left: 70 71
        on right: 68 70
    VarDeclRest <varDecl> (66)
        on left: 72
        on right: 70
    FieldDeclList <varDeclList> (67)
        on left: 73 74
        on right: 78
    FieldDeclRestList <varDeclList> (68)
        on left: 75 76
        on right: 73 75
    FieldDeclRest <varDecl> (69)
        on left: 77
        on right: 75
    StructDef <structDef> (70)
        on left: 78
        on right: 5
    ParamDecl <paramDecl> (71)
        on left: 79
        on right: 80 81
    FnDecl <fnDecl> (72)
        on left: 80 81
        on right: 82 85
    FnDeclStmt <fnDeclStmt> (73)
        on left: 82
        on right: 6
    ReturnStmt <returnStmt> (74)
        on left: 83 84
        on right: 91
    FnDef <fnDef> (75)
        on left: 85
        on right: 7
    CodeBlockStmt <codeBlockStmt> (76)
        on left: 86 87 88 89 90 91 92 93 94
        on right: 95
    CodeBlockStmtList <codeBlockStmtList> (77)
        on left: 95 96
        on right: 95 97
    CodeBlock <codeBlockStmtList> (78)
        on left: 97
        on right: 85 99 100 101
    CallStmt <callStmt> (79)
        on left: 98
        on right: 88
    IfStmt <ifStmt> (80)
        on left: 99 100
        on right: 89
    WhileStmt <whileStmt> (81)
        on left: 101
        on right: 90


State 0

    0 $accept: . Program $end

    LET        shift, and go to state 1
    STRUCT     shift, and go to state 2
    FN         shift, and go to state 3
    SEMICOLON  shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    Program             go to state 5
    ProgramElementList  go to state 6
    ProgramElement      go to state 7
    VarDeclStmt         go to state 8
    StructDef           go to state 9
    FnDecl              go to state 10
    FnDeclStmt          go to state 11
    FnDef               go to state 12


State 1

   54 VarDeclStmt: LET . VarDecl SEMICOLON
   55            | LET . VarDef SEMICOLON

    ID  shift, and go to state 13

    VarDecl  go to state 14
    VarDef   go to state 15


State 2

   78 StructDef: STRUCT . ID LB FieldDeclList RB

    ID  shift, and go to state 16


State 3

   80 FnDecl: FN . ID LP ParamDecl RP
   81       | FN . ID LP ParamDecl RP ARROW Type

    ID  shift, and go to state 17


State 4

    8 ProgramElement: SEMICOLON .

    $default  reduce using rule 8 (ProgramElement)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 18


State 6

    1 Program: ProgramElementList .

    $default  reduce using rule 1 (Program)


State 7

    2 ProgramElementList: ProgramElement . ProgramElementList

    LET        shift, and go to state 1
    STRUCT     shift, and go to state 2
    FN         shift, and go to state 3
    SEMICOLON  shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    ProgramElementList  go to state 19
    ProgramElement      go to state 7
    VarDeclStmt         go to state 8
    StructDef           go to state 9
    FnDecl              go to state 10
    FnDeclStmt          go to state 11
    FnDef               go to state 12


State 8

    4 ProgramElement: VarDeclStmt .

    $default  reduce using rule 4 (ProgramElement)


State 9

    5 ProgramElement: StructDef .

    $default  reduce using rule 5 (ProgramElement)


State 10

   82 FnDeclStmt: FnDecl . SEMICOLON
   85 FnDef: FnDecl . CodeBlock

    SEMICOLON  shift, and go to state 20
    LB         shift, and go to state 21

    CodeBlock  go to state 22


State 11

    6 ProgramElement: FnDeclStmt .

    $default  reduce using rule 6 (ProgramElement)


State 12

    7 ProgramElement: FnDef .

    $default  reduce using rule 7 (ProgramElement)


State 13

   56 VarDecl: ID . COLON Type
   57        | ID .
   58        | ID . LSB NUM RSB COLON Type
   59        | ID . LSB NUM RSB
   62 VarDef: ID . COLON Type AS RightVal
   63       | ID . AS RightVal
   64       | ID . LSB NUM RSB COLON Type AS LB RightValList RB
   65       | ID . LSB NUM RSB AS LB RightValList RB

    COLON  shift, and go to state 23
    LSB    shift, and go to state 24
    AS     shift, and go to state 25

    $default  reduce using rule 57 (VarDecl)


State 14

   54 VarDeclStmt: LET VarDecl . SEMICOLON

    SEMICOLON  shift, and go to state 26


State 15

   55 VarDeclStmt: LET VarDef . SEMICOLON

    SEMICOLON  shift, and go to state 27


State 16

   78 StructDef: STRUCT ID . LB FieldDeclList RB

    LB  shift, and go to state 28


State 17

   80 FnDecl: FN ID . LP ParamDecl RP
   81       | FN ID . LP ParamDecl RP ARROW Type

    LP  shift, and go to state 29


State 18

    0 $accept: Program $end .

    $default  accept


State 19

    2 ProgramElementList: ProgramElement ProgramElementList .

    $default  reduce using rule 2 (ProgramElementList)


State 20

   82 FnDeclStmt: FnDecl SEMICOLON .

    $default  reduce using rule 82 (FnDeclStmt)


State 21

   97 CodeBlock: LB . CodeBlockStmtList RB

    ID         shift, and go to state 30
    LET        shift, and go to state 1
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    CONTINUE   shift, and go to state 33
    BREAK      shift, and go to state 34
    RETURN     shift, and go to state 35
    SEMICOLON  shift, and go to state 36

    $default  reduce using rule 96 (CodeBlockStmtList)

    ArrayExpr          go to state 37
    AssignStmt         go to state 38
    LeftVal            go to state 39
    FnCall             go to state 40
    VarDeclStmt        go to state 41
    ReturnStmt         go to state 42
    CodeBlockStmt      go to state 43
    CodeBlockStmtList  go to state 44
    CallStmt           go to state 45
    IfStmt             go to state 46
    WhileStmt          go to state 47


State 22

   85 FnDef: FnDecl CodeBlock .

    $default  reduce using rule 85 (FnDef)


State 23

   56 VarDecl: ID COLON . Type
   62 VarDef: ID COLON . Type AS RightVal

    ID   shift, and go to state 48
    INT  shift, and go to state 49

    Type  go to state 50


State 24

   58 VarDecl: ID LSB . NUM RSB COLON Type
   59        | ID LSB . NUM RSB
   64 VarDef: ID LSB . NUM RSB COLON Type AS LB RightValList RB
   65       | ID LSB . NUM RSB AS LB RightValList RB

    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52

    NUM  go to state 53


State 25

   63 VarDef: ID AS . RightVal

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 56
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    RightVal   go to state 61
    FnCall     go to state 62


State 26

   54 VarDeclStmt: LET VarDecl SEMICOLON .

    $default  reduce using rule 54 (VarDeclStmt)


State 27

   55 VarDeclStmt: LET VarDef SEMICOLON .

    $default  reduce using rule 55 (VarDeclStmt)


State 28

   78 StructDef: STRUCT ID LB . FieldDeclList RB

    ID  shift, and go to state 63

    $default  reduce using rule 74 (FieldDeclList)

    FieldDecl      go to state 64
    FieldDeclList  go to state 65


State 29

   80 FnDecl: FN ID LP . ParamDecl RP
   81       | FN ID LP . ParamDecl RP ARROW Type

    ID  shift, and go to state 66

    $default  reduce using rule 69 (VarDeclList)

    VarDecl      go to state 67
    VarDeclList  go to state 68
    ParamDecl    go to state 69


State 30

   44 LeftVal: ID .
   53 FnCall: ID . LP RightValList RP

    LP  shift, and go to state 70

    $default  reduce using rule 44 (LeftVal)


State 31

   99 IfStmt: IF . BoolUnit_ CodeBlock
  100       | IF . BoolUnit_ CodeBlock ELSE CodeBlock

    LP  shift, and go to state 71

    BoolUnit_  go to state 72


State 32

  101 WhileStmt: WHILE . BoolUnit_ CodeBlock

    LP  shift, and go to state 71

    BoolUnit_  go to state 73


State 33

   92 CodeBlockStmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 34

   93 CodeBlockStmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 75


State 35

   83 ReturnStmt: RETURN . RightVal SEMICOLON
   84           | RETURN . SEMICOLON

    ID         shift, and go to state 54
    UNUM       shift, and go to state 51
    SEMICOLON  shift, and go to state 76
    SUB        shift, and go to state 52
    LP         shift, and go to state 55

    ArithExpr  go to state 56
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    RightVal   go to state 77
    FnCall     go to state 62


State 36

   94 CodeBlockStmt: SEMICOLON .

    $default  reduce using rule 94 (CodeBlockStmt)


State 37

   45 LeftVal: ArrayExpr .

    $default  reduce using rule 45 (LeftVal)


State 38

   87 CodeBlockStmt: AssignStmt .

    $default  reduce using rule 87 (CodeBlockStmt)


State 39

   16 ArrayExpr: LeftVal . LSB ID RSB
   17          | LeftVal . LSB NUM RSB
   43 AssignStmt: LeftVal . AS RightVal SEMICOLON
   46 LeftVal: LeftVal . DOT ID

    DOT  shift, and go to state 78
    LSB  shift, and go to state 79
    AS   shift, and go to state 80


State 40

   98 CallStmt: FnCall . SEMICOLON

    SEMICOLON  shift, and go to state 81


State 41

   86 CodeBlockStmt: VarDeclStmt .

    $default  reduce using rule 86 (CodeBlockStmt)


State 42

   91 CodeBlockStmt: ReturnStmt .

    $default  reduce using rule 91 (CodeBlockStmt)


State 43

   95 CodeBlockStmtList: CodeBlockStmt . CodeBlockStmtList

    ID         shift, and go to state 30
    LET        shift, and go to state 1
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    CONTINUE   shift, and go to state 33
    BREAK      shift, and go to state 34
    RETURN     shift, and go to state 35
    SEMICOLON  shift, and go to state 36

    $default  reduce using rule 96 (CodeBlockStmtList)

    ArrayExpr          go to state 37
    AssignStmt         go to state 38
    LeftVal            go to state 39
    FnCall             go to state 40
    VarDeclStmt        go to state 41
    ReturnStmt         go to state 42
    CodeBlockStmt      go to state 43
    CodeBlockStmtList  go to state 82
    CallStmt           go to state 45
    IfStmt             go to state 46
    WhileStmt          go to state 47


State 44

   97 CodeBlock: LB CodeBlockStmtList . RB

    RB  shift, and go to state 83


State 45

   88 CodeBlockStmt: CallStmt .

    $default  reduce using rule 88 (CodeBlockStmt)


State 46

   89 CodeBlockStmt: IfStmt .

    $default  reduce using rule 89 (CodeBlockStmt)


State 47

   90 CodeBlockStmt: WhileStmt .

    $default  reduce using rule 90 (CodeBlockStmt)


State 48

   67 Type: ID .

    $default  reduce using rule 67 (Type)


State 49

   66 Type: INT .

    $default  reduce using rule 66 (Type)


State 50

   56 VarDecl: ID COLON Type .
   62 VarDef: ID COLON Type . AS RightVal

    AS  shift, and go to state 84

    $default  reduce using rule 56 (VarDecl)


State 51

   14 NUM: UNUM .

    $default  reduce using rule 14 (NUM)


State 52

   15 NUM: SUB . UNUM

    UNUM  shift, and go to state 85


State 53

   58 VarDecl: ID LSB NUM . RSB COLON Type
   59        | ID LSB NUM . RSB
   64 VarDef: ID LSB NUM . RSB COLON Type AS LB RightValList RB
   65       | ID LSB NUM . RSB AS LB RightValList RB

    RSB  shift, and go to state 86


State 54

   19 ExprUnit: ID .
   44 LeftVal: ID .
   53 FnCall: ID . LP RightValList RP

    LP  shift, and go to state 70

    DOT       reduce using rule 44 (LeftVal)
    LSB       reduce using rule 44 (LeftVal)
    $default  reduce using rule 19 (ExprUnit)


State 55

   20 ExprUnit: LP . ArithExpr RP

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 87
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    FnCall     go to state 62


State 56

    9 ArithExpr: ArithExpr . ADD ArithExpr
   10          | ArithExpr . SUB ArithExpr
   11          | ArithExpr . MUL ArithExpr
   12          | ArithExpr . DIV ArithExpr
   47 RightVal: ArithExpr .

    ADD  shift, and go to state 88
    SUB  shift, and go to state 89
    MUL  shift, and go to state 90
    DIV  shift, and go to state 91

    $default  reduce using rule 47 (RightVal)


State 57

   18 ExprUnit: NUM .

    $default  reduce using rule 18 (ExprUnit)


State 58

   22 ExprUnit: ArrayExpr .
   45 LeftVal: ArrayExpr .

    DOT       reduce using rule 45 (LeftVal)
    LSB       reduce using rule 45 (LeftVal)
    $default  reduce using rule 22 (ExprUnit)


State 59

   13 ArithExpr: ExprUnit .

    $default  reduce using rule 13 (ArithExpr)


State 60

   16 ArrayExpr: LeftVal . LSB ID RSB
   17          | LeftVal . LSB NUM RSB
   23 ExprUnit: LeftVal . DOT ID
   46 LeftVal: LeftVal . DOT ID

    DOT  shift, and go to state 92
    LSB  shift, and go to state 79


State 61

   63 VarDef: ID AS RightVal .

    $default  reduce using rule 63 (VarDef)


State 62

   21 ExprUnit: FnCall .

    $default  reduce using rule 21 (ExprUnit)


State 63

   60 FieldDecl: ID . COLON Type
   61          | ID . LSB NUM RSB COLON Type

    COLON  shift, and go to state 93
    LSB    shift, and go to state 94


State 64

   73 FieldDeclList: FieldDecl . FieldDeclRestList

    COMMA  shift, and go to state 95

    $default  reduce using rule 76 (FieldDeclRestList)

    FieldDeclRestList  go to state 96
    FieldDeclRest      go to state 97


State 65

   78 StructDef: STRUCT ID LB FieldDeclList . RB

    RB  shift, and go to state 98


State 66

   56 VarDecl: ID . COLON Type
   57        | ID .
   58        | ID . LSB NUM RSB COLON Type
   59        | ID . LSB NUM RSB

    COLON  shift, and go to state 99
    LSB    shift, and go to state 100

    $default  reduce using rule 57 (VarDecl)


State 67

   68 VarDeclList: VarDecl . VarDeclRestList

    COMMA  shift, and go to state 101

    $default  reduce using rule 71 (VarDeclRestList)

    VarDeclRestList  go to state 102
    VarDeclRest      go to state 103


State 68

   79 ParamDecl: VarDeclList .

    $default  reduce using rule 79 (ParamDecl)


State 69

   80 FnDecl: FN ID LP ParamDecl . RP
   81       | FN ID LP ParamDecl . RP ARROW Type

    RP  shift, and go to state 104


State 70

   53 FnCall: ID LP . RightValList RP

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    $default  reduce using rule 49 (RightValList)

    ArithExpr     go to state 56
    NUM           go to state 57
    ArrayExpr     go to state 58
    ExprUnit      go to state 59
    LeftVal       go to state 60
    RightVal      go to state 105
    RightValList  go to state 106
    FnCall        go to state 62


State 71

   35 BoolUnit_: LP . ExprUnit LT ExprUnit RP
   36          | LP . ExprUnit LE ExprUnit RP
   37          | LP . ExprUnit GT ExprUnit RP
   38          | LP . ExprUnit GE ExprUnit RP
   39          | LP . ExprUnit EQ ExprUnit RP
   40          | LP . ExprUnit NE ExprUnit RP
   41          | LP . BoolExpr RP
   42          | LP . NOT BoolUnit RP

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    NOT   shift, and go to state 107
    LP    shift, and go to state 108

    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 109
    BoolExpr   go to state 110
    BoolUnit   go to state 111
    LeftVal    go to state 60
    FnCall     go to state 62


State 72

   99 IfStmt: IF BoolUnit_ . CodeBlock
  100       | IF BoolUnit_ . CodeBlock ELSE CodeBlock

    LB  shift, and go to state 21

    CodeBlock  go to state 112


State 73

  101 WhileStmt: WHILE BoolUnit_ . CodeBlock

    LB  shift, and go to state 21

    CodeBlock  go to state 113


State 74

   92 CodeBlockStmt: CONTINUE SEMICOLON .

    $default  reduce using rule 92 (CodeBlockStmt)


State 75

   93 CodeBlockStmt: BREAK SEMICOLON .

    $default  reduce using rule 93 (CodeBlockStmt)


State 76

   84 ReturnStmt: RETURN SEMICOLON .

    $default  reduce using rule 84 (ReturnStmt)


State 77

   83 ReturnStmt: RETURN RightVal . SEMICOLON

    SEMICOLON  shift, and go to state 114


State 78

   46 LeftVal: LeftVal DOT . ID

    ID  shift, and go to state 115


State 79

   16 ArrayExpr: LeftVal LSB . ID RSB
   17          | LeftVal LSB . NUM RSB

    ID    shift, and go to state 116
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52

    NUM  go to state 117


State 80

   43 AssignStmt: LeftVal AS . RightVal SEMICOLON

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 56
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    RightVal   go to state 118
    FnCall     go to state 62


State 81

   98 CallStmt: FnCall SEMICOLON .

    $default  reduce using rule 98 (CallStmt)


State 82

   95 CodeBlockStmtList: CodeBlockStmt CodeBlockStmtList .

    $default  reduce using rule 95 (CodeBlockStmtList)


State 83

   97 CodeBlock: LB CodeBlockStmtList RB .

    $default  reduce using rule 97 (CodeBlock)


State 84

   62 VarDef: ID COLON Type AS . RightVal

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 56
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    RightVal   go to state 119
    FnCall     go to state 62


State 85

   15 NUM: SUB UNUM .

    $default  reduce using rule 15 (NUM)


State 86

   58 VarDecl: ID LSB NUM RSB . COLON Type
   59        | ID LSB NUM RSB .
   64 VarDef: ID LSB NUM RSB . COLON Type AS LB RightValList RB
   65       | ID LSB NUM RSB . AS LB RightValList RB

    COLON  shift, and go to state 120
    AS     shift, and go to state 121

    $default  reduce using rule 59 (VarDecl)


State 87

    9 ArithExpr: ArithExpr . ADD ArithExpr
   10          | ArithExpr . SUB ArithExpr
   11          | ArithExpr . MUL ArithExpr
   12          | ArithExpr . DIV ArithExpr
   20 ExprUnit: LP ArithExpr . RP

    ADD  shift, and go to state 88
    SUB  shift, and go to state 89
    MUL  shift, and go to state 90
    DIV  shift, and go to state 91
    RP   shift, and go to state 122


State 88

    9 ArithExpr: ArithExpr ADD . ArithExpr

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 123
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    FnCall     go to state 62


State 89

   10 ArithExpr: ArithExpr SUB . ArithExpr

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 124
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    FnCall     go to state 62


State 90

   11 ArithExpr: ArithExpr MUL . ArithExpr

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 125
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    FnCall     go to state 62


State 91

   12 ArithExpr: ArithExpr DIV . ArithExpr

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    LP    shift, and go to state 55

    ArithExpr  go to state 126
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    LeftVal    go to state 60
    FnCall     go to state 62


State 92

   23 ExprUnit: LeftVal DOT . ID
   46 LeftVal: LeftVal DOT . ID

    ID  shift, and go to state 127


State 93

   60 FieldDecl: ID COLON . Type

    ID   shift, and go to state 48
    INT  shift, and go to state 49

    Type  go to state 128


State 94

   61 FieldDecl: ID LSB . NUM RSB COLON Type

    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52

    NUM  go to state 129


State 95

   77 FieldDeclRest: COMMA . FieldDecl

    ID  shift, and go to state 63

    FieldDecl  go to state 130


State 96

   73 FieldDeclList: FieldDecl FieldDeclRestList .

    $default  reduce using rule 73 (FieldDeclList)


State 97

   75 FieldDeclRestList: FieldDeclRest . FieldDeclRestList

    COMMA  shift, and go to state 95

    $default  reduce using rule 76 (FieldDeclRestList)

    FieldDeclRestList  go to state 131
    FieldDeclRest      go to state 97


State 98

   78 StructDef: STRUCT ID LB FieldDeclList RB .

    $default  reduce using rule 78 (StructDef)


State 99

   56 VarDecl: ID COLON . Type

    ID   shift, and go to state 48
    INT  shift, and go to state 49

    Type  go to state 132


State 100

   58 VarDecl: ID LSB . NUM RSB COLON Type
   59        | ID LSB . NUM RSB

    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52

    NUM  go to state 133


State 101

   72 VarDeclRest: COMMA . VarDecl

    ID  shift, and go to state 66

    VarDecl  go to state 134


State 102

   68 VarDeclList: VarDecl VarDeclRestList .

    $default  reduce using rule 68 (VarDeclList)


State 103

   70 VarDeclRestList: VarDeclRest . VarDeclRestList

    COMMA  shift, and go to state 101

    $default  reduce using rule 71 (VarDeclRestList)

    VarDeclRestList  go to state 135
    VarDeclRest      go to state 103


State 104

   80 FnDecl: FN ID LP ParamDecl RP .
   81       | FN ID LP ParamDecl RP . ARROW Type

    ARROW  shift, and go to state 136

    $default  reduce using rule 80 (FnDecl)


State 105

   48 RightValList: RightVal . RightValRestList

    COMMA  shift, and go to state 137

    $default  reduce using rule 51 (RightValRestList)

    RightValRestList  go to state 138
    RightValRest      go to state 139


State 106

   53 FnCall: ID LP RightValList . RP

    RP  shift, and go to state 140


State 107

   34 BoolUnit: NOT . BoolUnit
   42 BoolUnit_: LP NOT . BoolUnit RP

    NOT  shift, and go to state 141
    LP   shift, and go to state 142

    BoolUnit  go to state 143


State 108

   20 ExprUnit: LP . ArithExpr RP
   27 BoolUnit: LP . ExprUnit LT ExprUnit RP
   28         | LP . ExprUnit LE ExprUnit RP
   29         | LP . ExprUnit GT ExprUnit RP
   30         | LP . ExprUnit GE ExprUnit RP
   31         | LP . ExprUnit EQ ExprUnit RP
   32         | LP . ExprUnit NE ExprUnit RP
   33         | LP . BoolExpr RP

    ID    shift, and go to state 54
    UNUM  shift, and go to state 51
    SUB   shift, and go to state 52
    NOT   shift, and go to state 141
    LP    shift, and go to state 108

    ArithExpr  go to state 87
    NUM        go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 144
    BoolExpr   go to state 145
    BoolUnit   go to state 111
    LeftVal    go to state 60
    FnCall     go to state 62


State 109

   35 BoolUnit_: LP ExprUnit . LT ExprUnit RP
   36          | LP ExprUnit . LE ExprUnit RP
   37          | LP ExprUnit . GT ExprUnit RP
   38          | LP ExprUnit . GE ExprUnit RP
   39          | LP ExprUnit . EQ ExprUnit RP
   40          | LP ExprUnit . NE ExprUnit RP

    LT  shift, and go to state 146
    LE  shift, and go to state 147
    GT  shift, and go to state 148
    GE  shift, and go to state 149
    EQ  shift, and go to state 150
    NE  shift, and go to state 151

